--- a/reduction_part1_student.ipynb
+++ b/reduction_part1_student.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
     "        \n",
     "        #trim off the overscan regions\n",
     "        #**********\n",
-    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[i:,2048:2200])\n",
+    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[:,1:2048])\n",
     "        \n",
     "        #write the image\n",
     "        tr_imname = imname.replace('.fits','_tr.fits',1)\n",
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 142,
    "metadata": {
     "scrolled": true
    },
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
     "        \n",
     "        #trim off the overscan regions\n",
     "        #**********\n",
-    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[i:,2048:2200])\n",
+    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[:,1:2048])\n",
     "        \n",
     "        #write the image\n",
     "        tr_imname = imname.replace('.fits','_tr.fits',1)\n",
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1209,7 @@
     "        \n",
     "        #trim off the overscan regions\n",
     "        #**********\n",
-    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[i:,2048:2200])\n",
+    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[:,1:2048])\n",
     "        \n",
     "        #write the image\n",
     "        tr_imname = imname.replace('.fits','_tr.fits',1)\n",
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 146,
    "metadata": {
     "scrolled": true
    },
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1397,7 @@
     "        \n",
     "        #trim off the overscan regions\n",
     "        #**********\n",
-    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[i:,2048:2200])\n",
+    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[:,1:2048])\n",
     "        \n",
     "        #write the image\n",
     "        tr_imname = imname.replace('.fits','_tr.fits',1)\n",
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1716,7 +1716,7 @@
     "        \n",
     "        #trim off the overscan regions\n",
     "        #**********\n",
-    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[i:,2048:2200])\n",
+    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[:,1:2048])\n",
     "        \n",
     "        #write the image\n",
     "        tr_imname = imname.replace('.fits','_tr.fits',1)\n",
@@ -1726,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2016,7 +2016,7 @@
     "        \n",
     "        #trim off the overscan regions\n",
     "        #**********\n",
-    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[i:,2048:2200])\n",
+    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[:,1:2048])\n",
     "        \n",
     "        #write the image\n",
     "        tr_imname = imname.replace('.fits','_tr.fits',1)\n",
@@ -2026,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,7 +2411,7 @@
     "        \n",
     "        #trim off the overscan regions\n",
     "        #**********\n",
-    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[i:,2048:2200])\n",
+    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[:,1:2048])\n",
     "        \n",
     "        #write the image\n",
     "        tr_imname = imname.replace('.fits','_tr.fits',1)\n",
@@ -2421,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -2643,6 +2643,20 @@
     "\n",
     "oscan_subtract(sciencelist_V_King20_good, redpath, rawpath)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
